# basic-engine

./: CMakeLists.txt  LICENSE  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: application.cpp  application.hpp  input.cpp  input.hpp  main.cpp  window.cpp  window.hpp
src/render/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vao.cpp  vao.hpp  vbl.cpp  vbl.hpp  vbo.cpp  vbo.hpp
